--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
     <modules>
         <module>rentApp</module>
         <module>rentCms</module>
+        <module>rentModel</module>
     </modules>
     <name>rent Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+
 
     <parent>
         <groupId>org.springframework.boot</groupId>
