--- a/rentApp/src/main/resources/application.properties
+++ b/rentApp/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8980
 
+#spring.datasource.url=jdbc:mysql://118.190.155.23:3306/rent?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&autoReconnect=true
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rent?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&autoReconnect=true
+#spring.datasource.password=WoAINI123!!!
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
