--- a/rentModel/pom.xml
+++ b/rentModel/pom.xml
@@ -7,9 +7,9 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>rentCms</artifactId>
+    <artifactId>rentModel</artifactId>
     <packaging>jar</packaging>
-    <name>rentCms Maven Webapp</name>
+    <name>rentModel Maven Webapp</name>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -17,27 +17,18 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
+
     <build>
-        <plugins>
+       <!-- <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>springloaded</artifactId>
-                        <version>1.2.5.RELEASE</version>
-                    </dependency>
-                </dependencies>
-                <!--<executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>-->
             </plugin>
-        </plugins>
+        </plugins>-->
     </build>
 </project>
